force-app/main/default/objects/User__c/fields/DefaultCardId__c.field-meta.xml
<CustomField>
    <fullName>DefaultCardId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Card</label>
    <referenceTo>BankCard__c</referenceTo>
    <relationshipLabel>Bank Cards</relationshipLabel>
    <relationshipName>DefaultCard</relationshipName>
    <type>Lookup</type>
</CustomField>