force-app/main/default/objects/User__c/fields/PassHash__c.field-meta.xml
<CustomField>
    <fullName>PassHash__c</fullName>
    <label>PassHash</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>